--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "amqplib": "^0.5.2",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "boom": "^7.2.0",
+    "bunyan": "^1.8.12",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "joi": "^13.5.2",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
-    "mongoose": "^4.13.14"
+    "mongoose": "^4.13.14",
+    "mongoose-unique-validator": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
